--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,3 @@
-server:
-  port: 8764
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
 spring:
-  application:
-    name: inventory-server
-  datasource:
-    type:
-    platform: mysql
-    url: jdbc:mysql://localhost:3306/eshop
-    username: root
-    password: 03102896528
+  profiles:
+    active: prod
